--- a/packages/server/views/layout.pug
+++ b/packages/server/views/layout.pug
@@ -7,7 +7,7 @@ html(lang='')
     title #{title} - Hackathon Starter
     meta(name='description', content='')
     meta(name='theme-color' content='#4DA5F4')
-    meta(name='csrf-token', content=_csrf)
+    //- meta(name='csrf-token', content=_csrf)
     link(rel='shortcut icon', href='/images/favicon.png')
     link(rel='stylesheet', href='/css/main.css')
 
@@ -24,9 +24,3 @@ html(lang='')
     script(src='/js/lib/bootstrap.min.js')
     script(async defer src="https://buttons.github.io/buttons.js")
     script(src='/js/main.js')
-
-    //- Google Analytics: change UA-38177297-2 to be your site's ID
-    script.
-      window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;
-      ga('create','UA-38177297-2','auto');ga('send','pageview')
-    script(src='https://www.google-analytics.com/analytics.js' async defer)
